--- a/tex/acm/kuramoto.bib
+++ b/tex/acm/kuramoto.bib
@@ -1,5 +1,5 @@
 % acmtr.bib
-% $Header$
+% $Header: /Users/saito/cvs/sfmt/tex/acm/kuramoto.bib,v 1.2 2006/09/09 08:50:53 saito Exp $
 
 @book {NR,
 author = "W. H. Press and S. A. Teukolsky and W. T. Vetterling and B. P. Flannery",
