--- a/tex/mcqmc-paper/kuramoto.bib
+++ b/tex/mcqmc-paper/kuramoto.bib
@@ -11,9 +11,9 @@ address = "Cambridge, England",
 year = "2002"}
 
 @book {knuth:bible,
-author = "Donald E. Knuth",
+author = "D. E. Knuth",
 title = "The Art of Computer Programming. Vol.2. Seminumerical Algorithms",
-edition = "3",
+edition = "3rd",
 publisher = "Addison-Wesley",
 address = "Reading, Mass.",
 year = "1997"}
@@ -26,7 +26,7 @@ volume = "3",
 year = "1993",
 pages = "87-98",
 number = "2",
-month = "apr"}
+month = "April"}
 
 @article {CLT,
 author = "R. Couture and P. L'Ecuyer and S. Tezuka",
