--- a/tex/mcqmc-paper/Saito.tex
+++ b/tex/mcqmc-paper/Saito.tex
@@ -34,11 +34,9 @@
 
 \title*{SIMD-oriented Fast Mersenne Twister:
 a 128-bit Pseudorandom Number Generator
-\footnote{This study is partially supported by JSPS/MEXT
+\thanks{This study is partially supported by JSPS/MEXT
 Grant-in-Aid for Scientific Research No.18654021, No. 16204002,
-and JSPS Core-to-Core Program No.18005.
-}
-}
+and JSPS Core-to-Core Program No.18005.}}
 \titlerunning{SIMD-oriented Fast Mersenne Twister}
             
 
@@ -46,11 +44,11 @@ and JSPS Core-to-Core Program No.18005.
 Makoto Matsumoto\inst{2}}
 
 \institute{
+Dept.\ of Math.\ Hiroshima University
 \texttt{saito@math.sci.hiroshima-u.ac.jp}
-Dept.\ of Math.\ Hiroshima University
 \and 
-\texttt{m-mat@math.sci.hiroshima-u.ac.jp}
 Dept.\ of Math.\ Hiroshima University
+\texttt{m-mat@math.sci.hiroshima-u.ac.jp}
 }
 \maketitle
             
