--- a/tex/mcqmc-paper/kuramoto.bib
+++ b/tex/mcqmc-paper/kuramoto.bib
@@ -121,6 +121,11 @@ author = "SPRNG",
 title = "SPRNG Home",
 note = "http://sprng.cs.fsu.edu/"}
 
+@misc{SFMT,
+author = "M. Saito and M. Matsumoto",
+title = "{SFMT Homepage}",
+note = "\url{http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/SFMT/index.html}"}
+
 @misc{GSL,
 author = "GNU",
 title = "GNU Scientific Library version1.6",
