referee report taiou
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@405 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/tex/mcqmc-paper/kuramoto.bib
+++ b/tex/mcqmc-paper/kuramoto.bib
@@ -30,7 +30,7 @@ month = "April"}
 
 @article {CLT,
 author = "R. Couture and P. L'Ecuyer and S. Tezuka",
-title = "On the distribution of k-dimensional  vectors for simple and combined Tausworthe sequences",
+title = "On the distribution of k-dimensional  vectors for simple and combined {Tausworthe} sequences",
 journal = "Math. Comp.",
 volume = "60",
 year = "1993",
@@ -71,7 +71,7 @@ number = "14",
 
 @inproceedings{BRENT,
 author = "R.P. Brent and P. Zimmermann",
-title = "Random number generators with period divisible by a Mersenne prime",
+title = "Random number generators with period divisible by a {Mersenne} prime",
 booktitle = "Computational Science and its Applications - ICCSA 2003",
 journal = "LNCS",
 volume = "2667",
